# c400g-ptz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/c400g_ptz/: __init__.py  ptz.py
tests/: test_basic.py
